<resources>
    <string name="app_name">Kreator</string>

    <string name="app_description">Discover stories, thinking, and expertise \nfrom writers on any topic.</string>
    <string name="TagLine">Think &amp; Enrich \nyour Knowledge</string>
    <string name="alreadyHaveAccount"><font fgcolor="#FFFFFF">Already have an Account?</font><font fgcolor="#539bf5"> <b>Sign in</b></font></string>
    <string name="loginHere"><font fgcolor="#000000">Already have an Account?</font><font fgcolor="#2EA043"> <b>Login here</b></font></string>
    <string name="termsService_privacyPolicy1"><font fgcolor="#FFFFFF">By signing up, you agree to our </font><a href="https://sites.google.com/view/kreator-blog-app-terms-service/home"><font fgcolor="#539bf5"><u>Terms of Service</u></font></a><font fgcolor="#FFFFFF"> and \nacknowledge that our </font><a href="https://sites.google.com/view/kreator-blog-app-privacypolicy/home"><font fgcolor="#539bf5"><u>Privacy Policy</u></font></a><font fgcolor="#FFFFFF"> applies to you.</font></string>
    <string name="termsService_privacyPolicy2"><font fgcolor="#000000">By signing up, you agree to our </font><a href="https://sites.google.com/view/kreator-blog-app-terms-service/home"><font fgcolor="#2EA043"><u>Terms of Service</u></font></a><font fgcolor="#000000"> and \nacknowledge that our </font><a href="https://sites.google.com/view/kreator-blog-app-privacypolicy/home"><font fgcolor="#2EA043"><u>Privacy Policy</u></font></a><font fgcolor="#000000"> applies to you.</font></string>
    <!--    <string name="termService"><font size="12">I agree with the </font><b><font size="13">Terms of Service</font></b></string>-->
    <string name="termService">I agree with the <b>Terms of Service</b></string>
    <string name="verifyEmail">What\'s\nYour Email?</string>
    <string name="verifyEmailDesc">We will send a verification email to your email, Please check Spam or Junk folder if not received in Inbox.</string>
    <string name="registerHere"><font fgcolor="#000000">Don\'t have an Account?</font><font fgcolor="#2EA043"> <b>Sign up</b></font></string>
    <string name="skip"><u>Skip</u></string>
    <string name="enterEmailPasswordReset">Enter the email address associated with \nyour account to request a password reset.</string>
    <string name="passwordGuideline">Your new password must be \ndifferent from previous use passwords.</string>
    <string name="resetPassword">Forgot\nYour Password?</string>
    <string name="rememberPassword">You remember your password? <b><u>Login</u></b></string>
    <string name="tv_enrich_knowledge">Enrich Your Knowledge</string>
    <string name="tv_enrich_knowledge_desc">KREATOR always provide resourceful blog, \ncase studies, business perspective that \nhelps you to grow your knowledge.</string>
    <string name="tv_save_blogs">Save Blogs That You Like</string>
    <string name="tv_save_blogs_desc">Just save the blogs that you wanna \nread in future. You will find the \nsaved blogs in one place.</string>
    <string name="tv_learn">Learn From Professionals</string>
    <string name="tv_learn_desc">Our content creators are professionals \nin their fields. They have a broad and \ndeep work and research experience.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_screen_desc">Choose a few of your favourite topics, then \nwe\'ll build your personalized feed.</string>
    <string name="follow_interests">Follow your interests</string>
    <string name="sample_post_content">Pick the <b><i>Lottie</i></b> for your Android app. You may have your own or you may want to select one from the 1000s of <b>Lottie animations</b> available for free on LottieFiles.It\'s important to test your selected Lottie using the <i>LottieFiles</i> app for Android to make sure the animation you\'ve chosen will play the same Android as sometimes not all animations are built with features supported in the Lottie Android player.Just scan the QR code under the animation on LottieFiles with the app to preview the animation.Pick the <b><i>Lottie</i></b> for your Android app. You may have your own or you may want to select one from the 1000s of <b>Lottie animations</b> available for free on LottieFiles.It\'s important to test your selected Lottie using the <i>LottieFiles</i> app for Android to make sure the animation you\'ve chosen will play the same Android as sometimes not all animations are built with features supported in the Lottie Android player.Just scan the QR code under the animation on LottieFiles with the app to preview the animation.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="add_profile_picture"><u>Add Profile Picture</u></string>
    <string name="loading_snackbar"><b><font fgcolor="#2E296B"><big>Unable to load this Post!!</big></font></b><font fgcolor="#2E296B">Check your Internet connection</font></string>
    <string name="noConnection"><b><font fgcolor="#2E296B"><big>Couldn\'t connect to internet!!</big></font></b><font fgcolor="#2E296B">\nPlease check your internet connection</font></string>
    <!--    <string name="tryAgain"><b><font size="14">Try Again</font></b></string>-->
    <string name="tryAgain"><b>Try Again</b></string>
    <string name="passwordConfirmed">New password \nconfirmed successfully</string>
    <string name="passwordRestGuide">You have successfully confirm your new \npassword. Please, use your new password \nwhen logging in.</string>
    <string name="set_new_password">Set new \nPassword</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="noComments"><big>No comments yet</big>\nSay something to start the conversation</string>


</resources>