<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/_14sdp"
    tools:context=".ui.onBoarding.fragments.VerifyEmailFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:src="@drawable/back_arrow"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingExtra="-6dp"
        android:text="@string/verifyEmail"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintBottom_toTopOf="@id/tvEnterEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEnterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/verifyEmailDesc"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterEmailField"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterEmailField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter email"
        android:textColorHint="@color/gray"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/light_black"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/email_small"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etYourEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp"
            android:paddingVertical="@dimen/_15sdp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/poppins_semibold"
        android:padding="@dimen/_12sdp"
        android:text="Continue"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_20sdp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmailField" />

    <TextView
        android:id="@+id/policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/termsService_privacyPolicy2"
        android:textColorLink="@color/green"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>