<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/_14sdp"
    tools:context=".ui.onBoarding.fragments.RequestEmailFragment">

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:src="@drawable/back_arrow"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingExtra="-5dp"
        android:text="@string/resetPassword"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@id/tvEnterEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enterEmailPasswordReset"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@id/resetEmailField"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetEmailField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter email"
        android:textColorHint="@color/gray"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/turquoise"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error"
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/email_small"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:enabled="false"
            android:focusable="false"
            android:selectAllOnFocus="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_15sdp"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="@font/poppins_semibold"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_20sdp"
        android:text="Next"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rememberPassword"/>

    <TextView
        android:id="@+id/rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rememberPassword"
        android:textColor="@color/dark_gray"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>